templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: magicalnginx-service
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: magicalnginx
