templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: magicalnginx-ingress
spec:
  rules:
    - host: nginxk8s.solsng.com
      http:
        paths:
          - path: /*
            backend:
              serviceName: magicalnginx-service
              servicePort: http
